--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
-index.html
+
 <!DOCTYPE html>
 <html>
     <head>
         <title>Calculadora de hidratación</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <div>
-            <div>
-                <h1>Calculadora basal</h1>
-                <input type="number" placeholder="Ingresar el peso en kg" />
-                <p>* Debe completar todos los datos</p>
-                <button>Calcular</button>
-                <p>71cc/h</p>
-                <p>m+m/2 : 105cc/h</p>
+        <div id="contenedor">
+            <div id="calculadora">
+                <div class="contenido">
+                    <h1>Hidratación Basal</h1>
+                    <p >Completa todos los datos</p>
+                    <input type="number" placeholder="Peso en kg" />
+                    <p>* Debe completar todos los datos</p>
+                    <button>Calcular</button>
+                    <p>71cc/h</p>
+                    <p>m+m/2 : 105cc/h</p>
+                </div>
             </div>
-    </body>    
-    <h1>¿Como se calcula?</h1>
-        <ul>
-            <li>De 0kg a 10kg, se calcula 100cc por cada kilo.</li>
-            <li>Se suman 50cc por cada kilo de peso por arriba de 10kg, hasta 20kg</li>
-            <li>De 20kg para arriba, se suman 20cc por cada kilo adicional</li>
-        </ul>
-    </div>
-
+            <div id="detalle">
+                <div class="contenido">
+                    <h1>¿Como se calcula?</h1>
+                    <ul>
+                        <li>De 0kg a 10kg, se calcula 100cc por cada kilo.</li>
+                        <li>Se suman 50cc por cada kilo de peso por arriba de 10kg, hasta 20kg</li>
+                        <li>De 20kg para arriba, se suman 20cc por cada kilo adicional</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+      </body>
+      
 </html>
